--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@ header-img: "img/about-bg.jpg"
 
 
     <p style="text-align:right;">
-        —— <a href="https://www.zhihu.com/question/294088771">第三只猫 － 不反智的鸡汤 </a>
+        —— 第三只猫 － <a href="https://www.zhihu.com/question/294088771">不反智的鸡汤 </a>
     </p>
 
 </div>
