modify cartographer, filters and web

--- a/about.html
+++ b/about.html
@@ -14,13 +14,15 @@ header-img: "img/about-bg.jpg"
 <!-- Chinese Version -->
 <div class="zh post-container">
     <blockquote>
-        如果不知道要做什么。
-        那就看看别人在做什么。
+    某天清晨，柴夫遇到了牧羊人。两人一见如故，在一块大石头上相谈甚欢。<br>
+    <br>日暮偏西，两人分别。柴夫乐呵呵的跟别人说了这件事。<br>
+    <br>智叟生气的说：“你是柴夫，他是牧羊人。他的羊吃饱了。你的柴呢？”<br>
     </blockquote>
+    
     丈夫回家，又累又饿，见妻子在揍孩子，忍了忍没理她，走到厨房看见桌上煮好一锅馄饨，于是大口迅速吃了一碗。<br>
     <br>吃完见老婆还在揍儿子，终于忍不住了：教育小孩不能老用暴力，要多讲道理嘛！ <br>
     <br>妻子说：好好的一锅馄饨，他居然撒了一泡尿进去，你说气人不气人，丈夫听后马上说：媳妇你歇一会，让我来揍！<br>
-    <br>所以请不要轻易评论任何人，因为你不在其中。<br>
+    
 
 
     <p style="text-align:right;">
